<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Pendaftaran Bukber"
    android:background="#fff"
    tools:context="com.senjapagi.BukberRanger.Main.Peserta.PendaftaranBukber">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/greeting_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bg_header_daylight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:elevation="3dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_view_jadwal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_marginTop="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textNamaJadwal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="Memuat Jadwal"
                                android:textColor="#fff"
                                android:textSize="13pt"/>

                            <TextView
                                android:id="@+id/textDateSchedule"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Memuat Tanggal"
                                android:textColor="#fff"
                                android:textSize="16dp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1px"
            android:orientation="horizontal"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_kuota"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/layout_schedule" />
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.cardview.widget.CardView>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_mainContainer"
            android:layout_marginTop="260dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="15dp"
            >

            <ScrollView
                android:visibility="visible"
                android:id="@+id/scrollView2"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/cardview_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent">


                        <LinearLayout
                            android:id="@+id/kuota_habis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_rounded_filled_stroke"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:layout_marginTop="10dp"
                            android:visibility="gone"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:src="@drawable/not_found"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:textAlignment="center"
                                android:text="Mohon Maaf Kuota Pendaftaran Bukber Hari Ini Sudah Habis\n-Jazakumullahu Khairan-"
                                android:textColor="#000000" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_peserta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/cardview_top"
                        android:background="@drawable/bg_rounded_filled_stroke"
                        tools:layout_editor_absoluteX="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/etdb_nama_peserta"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#000"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="Nama Peserta"
                                android:textColor="#000" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="Jenis Kelamin :"
                                android:textColor="#000" />

                            <RadioGroup
                                android:id="@+id/radioGender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radioMale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:text="Ikhwan"
                                    android:textColor="#000" />

                                <RadioButton
                                    android:id="@+id/radioFemale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="#ffffff"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:text="Akhwat"
                                    android:textColor="#000" />

                            </RadioGroup>

                            <Spinner
                                android:visibility="gone"
                                android:id="@+id/spinner_jk"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <EditText
                                android:id="@+id/etdb_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#000"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="Username/Nickname"
                                android:textColor="#000" />

                            <EditText
                                android:id="@+id/etdb_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#000"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:textColor="#000" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="5dp"
                                android:visibility="visible"
                                android:background="@drawable/bg_rounded_filled_stroke1dp"
                                >
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat_thin"
                                    android:textAlignment="textStart"
                                    android:textSize="5pt"
                                    android:textColor="#000000"
                                    android:layout_marginLeft="6dp"
                                    android:layout_marginBottom="5dp"
                                    android:text="Khusus Mahasiswa Telkom University"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >
                                    <Spinner
                                        android:id="@+id/spinner_fakultas"
                                        android:layout_weight="1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"/>

                                    <EditText
                                        android:id="@+id/etdb_jurusan"
                                        android:layout_weight="1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:backgroundTint="#000"
                                        android:fontFamily="@font/montserrat_regular"
                                        android:hint="Jurusan"
                                        android:inputType="text"
                                        android:textColor="#000" />
                                </LinearLayout>
                                <EditText
                                    android:id="@+id/etdb_kontak"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="#000"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:hint="Line ID / Whatsapp "
                                    android:inputType="text"
                                    android:textColor="#000" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/note_daftar_bukber"
                                android:textColor="#000" />
                            <Button
                                android:id="@+id/btndb_daftar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_rounded_filled_stroke1dp"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="Daftar Bukber"
                                android:textColor="#000000"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"></Button>

                        </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ketentuanDaftar"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:background="@drawable/bg_rounded_black"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_thin"
                            android:text="@string/note_daftar1"
                            android:layout_marginBottom="5dp"
                            android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_thin"
                            android:text="@string/note_daftar2"
                            android:layout_marginBottom="5dp"
                            android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_thin"
                            android:text="@string/note_daftar3"
                            android:layout_marginBottom="5dp"
                            android:textColor="#000000" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_thin"
                            android:text="@string/note_daftar_penting"
                            android:textColor="#000000" />

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_loading"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="220dp">
    </include>

</RelativeLayout>
